fix github url bug, fix top button mobile safari bug, new draft posts,  add <pre><code> css,

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -688,7 +688,7 @@ body {
     }
 }
 
-.highlight {
+pre {
     font-size: .889em;
     line-height: 1.5;
     background: #f5f5f5;
@@ -696,7 +696,8 @@ body {
     margin-bottom: 1em;
     padding: 1em;
     overflow: scroll;
-    max-height: 20em;
+}
+.highlight {
     .c     { color: #998; font-style: italic } // Comment
     .err   { color: #a61717; background-color: #e3d2d2 } // Error
     .k     { font-weight: bold } // Keyword
